--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -12,24 +12,31 @@
     <meta name="description" content="We are a well-known and reliable cheat provider that has been around since 2009. We offer cheats for multiple different games." />
     <meta property="og:description" content="We are a well-known and reliable cheat provider that has been around since 2009. We offer cheats for multiple different games." />
     <meta property="twitter:description" content="We are a well-known and reliable cheat provider that has been around since 2009. We offer cheats for multiple different games." />
-    <link rel="canonical" href="https://interwebz-cheats.com/community/" />
+    <link rel="canonical" href="/community/community.html" />
     <link rel="alternate" type="application/rss+xml" title="RSS feed for INTERWEBZ" href="/community/forums/-/index.rss" />
     <meta property="og:site_name" content="INTERWEBZ" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="INTERWEBZ" />
     <meta property="twitter:title" content="INTERWEBZ" />
-    <meta property="og:url" content="https://interwebz-cheats.com/community/" />
+    <meta property="og:url" content="/community/community.html" />
     <link rel="preload" href="/community/styles/fonts/fa/fa-regular-400.woff2?_v=5.15.1" as="font" type="font/woff2" crossorigin="anonymous" />
     <link rel="preload" href="/community/styles/fonts/fa/fa-solid-900.woff2?_v=5.15.1" as="font" type="font/woff2" crossorigin="anonymous" />
     <link rel="preload" href="/community/styles/fonts/fa/fa-brands-400.woff2?_v=5.15.1" as="font" type="font/woff2" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/a.css" />
     <link href="/fonts.googleapis.com/css.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./styles/c.css" />
+    <link rel="stylesheet" href="./styles/forum.css">
     <script src="/community/js/xf/preamble.min.js?_v=d92e847c" type="40e90c3518bc483601b5614f-text/javascript"></script>
     <link rel="icon" type="image/png" href="https://interwebz-cheats.com/community/styles/interwebz/xenforo/xenforo-favicon.png" sizes="32x32" />
     <script class="js-klEditorTemplates" type="application/json">
         []
     </script>
+    <script src="https://kit.fontawesome.com/436c17474f.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body data-template="forum_list">
@@ -60,7 +67,7 @@
                             </li>
                             <li>
                                 <div class="p-navEl is-selected" data-has-children="true">
-                                    <a href="/community/" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="forums">Forums</a>
+                                    <a href="/community/" class="p-navEl-link p-navEl-link--splitMenu" style="color: #E8E0F5 !important; background: #554270 !important; border-radius: 4px;" data-nav-id="forums">Forums</a>
                                     <a data-xf-key="2" data-xf-click="menu" data-menu-pos-ref="< .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
                                     <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
                                         <div class="menu-content">
@@ -124,7 +131,7 @@
 <span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="toufiq">
 <span class="avatar-u93264-s"></span>
 </span>
-<span class="p-navgroup-linkText">toufiq</span>
+<span class="p-navgroup-linkText" style="color: #ebe2fa  !important;">toufiq</span>
 </a>
                         <div class="menu menu--structural menu--wide menu--account" data-menu="menu" aria-hidden="true" data-href="/community/account/visitor-menu" data-load-target=".js-visitorMenuBody">
                             <div class="menu-content js-visitorMenuBody">
@@ -133,9 +140,10 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/conversations/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--conversations js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref="< .p-navgroup" aria-label="Inbox"
+                        <a href="/community/conversations/" class="p-navgroup-link js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref="< .p-navgroup" aria-label="Inbox"
                             aria-expanded="false" aria-haspopup="true">
-<i aria-hidden="true"></i>
+<!-- <i aria-hidden="true"></i> -->
+<i class="fa-regular fa-envelope" style="color: #ebe2fa  !important;"></i>
 <span class="p-navgroup-linkText"></span>
 </a>
                         <div class="menu menu--structural menu--medium" data-menu="menu" aria-hidden="true" data-href="/community/conversations/popup" data-nocache="true" data-load-target=".js-convMenuBody">
@@ -154,9 +162,11 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/account/alerts" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--alerts js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
+                        <a href="/community/account/alerts" class="p-navgroup-link p-navgroup-link--iconic js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
                             aria-haspopup="true">
 <i aria-hidden="true"></i>
+<i class="fa-regular fa-bell" style="color: #ebe2fa  !important;"></i>
+
 <span class="p-navgroup-linkText"></span>
 </a>
                         <div class="menu menu--structural menu--medium" data-menu="menu" aria-hidden="true" data-href="/community/account/alerts-popup" data-nocache="true" data-load-target=".js-alertsMenuBody">
@@ -182,9 +192,10 @@
 <i aria-hidden="true"></i>
 <span class="p-navgroup-linkText">What's new</span>
 </a>
-                        <a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--search" data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
+                        <a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
 <i aria-hidden="true"></i>
-<span class="p-navgroup-linkText">Search</span>
+<i class="fa-solid fa-magnifying-glass"></i>
+<!-- <span class="p-navgroup-linkText" >Search</span> -->
 </a>
                         <div class="menu menu--structural menu--wide" data-menu="menu" aria-hidden="true">
                             <form action="/community/search/search" method="post" class="menu-content" data-xf-init="quick-search">
@@ -1208,7 +1219,7 @@ Media Resources</a>
             enablePush: false,
             pushAppServerKey: '',
             url: {
-                fullBase: 'https://interwebz-cheats.com/community/',
+                fullBase: '/community/community.html',
                 basePath: '/community/',
                 css: '/community/css.php?css=__SENTINEL__&s=3&l=1&d=1701887046',
                 keepAlive: '/community/login/keep-alive'
@@ -1349,7 +1360,7 @@ Media Resources</a>
         {
             "@context": "https://schema.org",
             "@type": "WebSite",
-            "url": "https://interwebz-cheats.com/community/",
+            "url": "/community/community.html",
             "potentialAction": {
                 "@type": "SearchAction",
                 "target": "https://interwebz-cheats.com/community/search/search?keywords={search_keywords}",
