--- a/index.html
+++ b/index.html
@@ -173,19 +173,16 @@
     </div>
     </div>
     </div>
-    <a href="https://interwebz-cheats.com/community" class="font-medium transition duration-150 ease-in-out whitespace-nowrap text-neutral-200 hover:text-neutral-100">
+    <a href="./community/community.html" class="font-medium transition duration-150 ease-in-out whitespace-nowrap text-neutral-200 hover:text-neutral-100">
     Community
     </a>
     <div>
-    <a href="https://interwebz-cheats.com/dashboard" class="inline-flex items-center p-2 -mx-2 space-x-3 font-medium transition duration-150 ease-in-out rounded-md whitespace-nowrap text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
-    <div class="flex-shrink-0">
-    <img src="https://interwebz-cheats.com/community/styles/interwebz/xenforo/default-avatar.jpg" alt="toufiq's Avatar" class="w-8 h-8 border rounded-md shadow border-neutral-300">
-    </div>
-    <span class="max-w-sm truncate">
-    Logged in as toufiq
-    </span>
-    </a>
-    </div>
+        <a href="./community/community.html" class="flex items-center justify-center w-full px-5 py-3 space-x-2 font-medium text-center transition duration-150 ease-in-out border-t border-neutral-350 text-neutral-200 bg-neutral-600 hover:bg-neutral-400 hover:text-neutral-100 focus:outline-none focus:bg-neutral-400 focus:text-neutral-100">
+        <span>Sign in</span>
+        <svg class="w-5 h-5 transition-transform duration-150 ease-in-out group-hover:transform group-hover:translate-x-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+        </svg> </a>
+        </div>
     </div>
     </div>
     </nav>
@@ -207,7 +204,7 @@
     <a href="https://interwebz-cheats.com/products" class="block px-3 py-2 text-base font-medium transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400 focus:outline-none focus:text-neutral-100 focus:bg-neutral-400" role="menuitem">
     Our Cheats
     </a>
-    <a href="https://interwebz-cheats.com/community" class="block px-3 py-2 mt-1 text-base font-medium transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400 focus:outline-none focus:text-neutral-100 focus:bg-neutral-400" role="menuitem">
+    <a href="./community/community.html" class="block px-3 py-2 mt-1 text-base font-medium transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400 focus:outline-none focus:text-neutral-100 focus:bg-neutral-400" role="menuitem">
     Community
     </a>
     </div>
@@ -244,7 +241,7 @@
     </a>
     </span>
     <span class="flex rounded-md shadow-sm ">
-    <a href="https://interwebz-cheats.com/community" class="inline-flex items-center justify-center border font-medium focus:outline-none transition duration-150 ease-in-out disabled:opacity-75 disabled:cursor-not-allowed px-8 py-3 text-base leading-6 rounded-md md:text-lg border border-neutral-350 text-neutral-200 bg-neutral-400 hover:bg-neutral-350 hover:text-neutral-100 focus:bg-neutral-350 focus:text-neutral-100 focus:ring ring-neutral-300 ring-opacity-75 active:text-neutral-100 active:bg-neutral-300 transition disabled:pointer-events-none disabled:opacity-75 disabled:cursor-not-allowed w-full" size="xxl" wire:loading.attr="disabled">
+    <a href="./community/community.html" class="inline-flex items-center justify-center border font-medium focus:outline-none transition duration-150 ease-in-out disabled:opacity-75 disabled:cursor-not-allowed px-8 py-3 text-base leading-6 rounded-md md:text-lg border border-neutral-350 text-neutral-200 bg-neutral-400 hover:bg-neutral-350 hover:text-neutral-100 focus:bg-neutral-350 focus:text-neutral-100 focus:ring ring-neutral-300 ring-opacity-75 active:text-neutral-100 active:bg-neutral-300 transition disabled:pointer-events-none disabled:opacity-75 disabled:cursor-not-allowed w-full" size="xxl" wire:loading.attr="disabled">
     Community Forums
     </a>
     </span>
@@ -938,7 +935,7 @@
     </h4>
     <ul class="mt-4 space-y-4">
     <li>
-    <a href="https://interwebz-cheats.com/community" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+    <a href="./community/community.html" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
     Community Forums
     </a>
     </li>
