--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTERWEBZ - Undetected Cheats for CS:GO, GMOD, and More...</title>
+    <title>INTERWEBZ</title>
     <meta name="description" content="We provide undetected premium hacks &amp; cheats for a variety of games such as CS:GO, CS:S, and more...">
     <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large, sitemap:https://interwebz-cheats.com/sitemap.xml">
     <meta name="keywords" content="hacks, cheats, premium, undetected, csgo cheat, csgo hack, multihack, wallhack, aimbot">
