--- a/community/community.html
+++ b/community/community.html
@@ -93,12 +93,12 @@
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
+	<div class="modal-dialog" >
 	  <div class="modal-content" style="border: 1px solid #6E5C8A;">
 		<div class="modal-header" style="border-bottom: 1px solid #6e5c8a">
 		  <h1 class="modal-title fs-5" id="exampleModalLabel" style="color: #e2ddea; font-size: 14px !important; padding: 5px;">Log in modal</h1>
 		  <!-- <button type="button" class="btn-close " data-bs-dismiss="modal" aria-label="Close"></button> -->
-		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+		  <button type="button" class="btn btn-secondary fs-4" style="background: transparent; border: none; color: #907bb1;" data-bs-dismiss="modal">
 			<i class="fa-solid fa-xmark"></i>
 		  </button>
 		</div>
