--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <div class="modal-body p-0" >
           <ul class="list-modal p-2 m-0">
             <li>
-                <a>Our Cheats</a>
+                <a href="">Our Cheats</a>
             </li>
             <li>
-                <a>Community</a>
+                <a href="./community/community.html">Community</a>
             </li>
           </ul>
         </div>
