--- a/community/community.html
+++ b/community/community.html
@@ -88,26 +88,19 @@
 		<div class="offcanvas-body">
 		  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 			<li class="nav-item">
-			  <a class="nav-link fs-6 active" aria-current="page" href="#">Log in</a>
+			  <a class="nav-link fs-6 active" aria-current="page" href="/community/community.html">Log in</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link fs-6" href="#">Register</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link fs-6" href="#">Home</a>
+				<a class="nav-link fs-6" href="../index.html">Home</a>
 			</li>
-			<li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle fs-6" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			<li class="nav-item ">
+			  <a class="nav-link dropdown-toggle fs-6" href="/Forums/forums.html" role="button" >
 				Forums
 			  </a>
-			  <ul class="dropdown-menu dropdown-menu-dark">
-				<li><a class="dropdown-item" href="#">Action</a></li>
-				<li><a class="dropdown-item" href="#">Another action</a></li>
-				<li>
-				  <hr class="dropdown-divider">
-				</li>
-				<li><a class="dropdown-item" href="#">Something else here</a></li>
-			  </ul>
+			 
 			</li>
 		  </ul>
 		</div>
