announcement page done

--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -117,6 +117,12 @@
                                     <a href="../index.html" class="p-navEl-link " data-xf-key="1" data-nav-id="home">Home</a>
                                 </div>
                             </li>
+                            <li>
+                                <div class="p-navEl is-selected" data-has-children="true">
+                                <a href="/community/" class="p-navEl-link p-navEl-link--splitMenu " style="color: #e8e0f5 !important;" data-nav-id="forums">Forums</a>
+            
+                                </div>
+                                </li>
                             
                             <li>
                                 <div class="p-navEl ">
@@ -203,6 +209,9 @@
 
 <span class="p-navgroup-linkText"></span>
 </a>
+<button type="button" class="btn btn-transparet d-md-none d-lg-none" style="color: #907bb1;">
+	<i class="fa-solid fa-bolt-lightning"></i>
+  </button>
                         <div class="menu menu--structural menu--medium" data-menu="menu" aria-hidden="true" data-href="/community/account/alerts-popup" data-nocache="true" data-load-target=".js-alertsMenuBody">
                             <div class="menu-content">
                                 <h3 class="menu-header">Alerts</h3>
@@ -222,10 +231,10 @@
                         </div>
                     </div>
                     <div class="p-navgroup p-discovery">
-                        <a href="/community/whats-new/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--whatsnew" aria-label="What&#039;s new" title="What&#039;s new">
+                        <!-- <a href="/community/whats-new/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--whatsnew" aria-label="What&#039;s new" title="What&#039;s new">
 <i aria-hidden="true"></i>
 <span class="p-navgroup-linkText">What's new</span>
-</a>
+</a> -->
                         <a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
 <i aria-hidden="true"></i>
 <i class="fa-solid fa-magnifying-glass"></i>
@@ -261,6 +270,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- // working on -->
         </nav>
         <div class="p-sectionLinks d-none d-md-block">
             <div class="p-sectionLinks-inner hScroller" data-xf-init="h-scroller">
