announcement page design fixed

--- a/Forums/Announcement/announcement.html
+++ b/Forums/Announcement/announcement.html
@@ -9,7 +9,7 @@
 <link rel="manifest" href="/community/webmanifest.php">
 <meta name="theme-color" content="#e8e0f5" />
 <meta name="apple-mobile-web-app-title" content="INTERWEBZ">
-<link rel="canonical" href="https://interwebz-cheats.com/community/forums/announcements.64/" />
+<link rel="canonical" href="" />
 <link rel="alternate" type="application/rss+xml" title="RSS feed for Announcements" href="/community/forums/announcements.64/index.rss" />
 <meta property="og:site_name" content="INTERWEBZ" />
 <meta property="og:type" content="website" />
@@ -18,7 +18,7 @@
 <meta name="description" content="Check here for all the latest information!" />
 <meta property="og:description" content="Check here for all the latest information!" />
 <meta property="twitter:description" content="Check here for all the latest information!" />
-<meta property="og:url" content="https://interwebz-cheats.com/community/forums/announcements.64/" />
+<meta property="og:url" content="" />
 <link rel="preload" href="/community/styles/fonts/fa/fa-regular-400.woff2?_v=5.15.1" as="font" type="font/woff2" crossorigin="anonymous" />
 <link rel="preload" href="/community/styles/fonts/fa/fa-solid-900.woff2?_v=5.15.1" as="font" type="font/woff2" crossorigin="anonymous" />
 <link rel="preload" href="/community/styles/fonts/fa/fa-brands-400.woff2?_v=5.15.1" as="font" type="font/woff2" crossorigin="anonymous" />
@@ -112,7 +112,7 @@
                     </li>
                     <li>
                         <div class="p-navEl is-selected" data-has-children="true">
-                        <a href="/community/" class="p-navEl-link p-navEl-link--splitMenu " style="color: #e8e0f5 !important;" data-nav-id="forums">Forums</a>
+                        <a href="../forums.html" class="p-navEl-link p-navEl-link--splitMenu " style="color: #e8e0f5 !important;" data-nav-id="forums">Forums</a>
     
                         </div>
                         </li>
@@ -345,13 +345,13 @@ toufiq
 <div class="p-breadcrumbs--container--inner">
 <ul class="p-breadcrumbs " itemscope itemtype="https://schema.org/BreadcrumbList">
 <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<a href="https://interwebz-cheats.com" itemprop="item">
+<a href="../../index.html" itemprop="item">
 <span itemprop="name"><i class="bi bi-house-door px-2"></i> Home</span>
 </a>
 <meta itemprop="position" content="1" />
 </li>
 <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<a href="/community/" itemprop="item">
+<a href="../forums.html" itemprop="item">
 <span itemprop="name"><i class="bi bi-chevron-right px-1"></i>Forums</span>
 </a>
 <meta itemprop="position" content="2" />
@@ -1200,13 +1200,13 @@ You have insufficient privileges to post threads here.
 </div>
 <ul class="p-breadcrumbs p-breadcrumbs--bottom" itemscope itemtype="https://schema.org/BreadcrumbList">
 <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<a href="https://interwebz-cheats.com" itemprop="item">
+<a href="../../index.html" itemprop="item">
 <span itemprop="name">Home</span>
 </a>
 <meta itemprop="position" content="1" />
 </li>
 <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<a href="/community/" itemprop="item">
+<a href="../forums.html" itemprop="item">
 <span itemprop="name">Forums</span>
 </a>
 <meta itemprop="position" content="2" />
@@ -1252,7 +1252,7 @@ You have insufficient privileges to post threads here.
 			enablePush: false,
 			pushAppServerKey: '',
 			url: {
-				fullBase: 'https://interwebz-cheats.com/community/',
+				fullBase: '../../community/community.html',
 				basePath: '/community/',
 				css: '/community/css.php?css=__SENTINEL__&s=3&l=1&d=1701887046',
 				keepAlive: '/community/login/keep-alive'
