--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -26,12 +26,13 @@
     <link href="/fonts.googleapis.com/css.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./styles/c.css" />
     <link rel="stylesheet" href="./styles/forum.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"/>
+
     <script src="/community/js/xf/preamble.min.js?_v=d92e847c" type="40e90c3518bc483601b5614f-text/javascript"></script>
     <link rel="icon" type="image/png" href="https://interwebz-cheats.com/community/styles/interwebz/xenforo/xenforo-favicon.png" sizes="32x32" />
     <script class="js-klEditorTemplates" type="application/json">
         []
     </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"/>
     <script src="https://kit.fontawesome.com/436c17474f.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -76,7 +77,7 @@
                                 <a class="nav-link fs-6" href="#">Dashboard</a>
                             </li>
                             <li class="nav-item dropdown p-2">
-                              <a class="nav-link dropdown-toggle fs-6" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <a class="nav-link dropdown-toggle fs-6" href="../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Knowledge base
                               </a>
                               <ul class="dropdown-menu dropdown-menu-dark">
@@ -131,7 +132,7 @@
                             </li>
                             <li>
                                 <div class="p-navEl " data-has-children="true">
-                                    <a href="/community/knowledge-base/" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfKnowledgeBase">Knowledge base</a>
+                                    <a href="../Knowledge base/knowledge-base.html" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfKnowledgeBase">Knowledge base</a>
                                     <a data-xf-key="4" data-xf-click="menu" data-menu-pos-ref=" .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
                                     <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
                                         <div class="menu-content">
