knowledge page done

--- a/Knowledge base/knowledge-base.html
+++ b/Knowledge base/knowledge-base.html
@@ -104,7 +104,7 @@
                             </li>
                             <li>
                                 <div class="p-navEl " >
-                                <a href="/community/" class="p-navEl-link p-navEl-link--splitMenu " data-xf-key="2" data-nav-id="forums">Forums</a>
+                                <a href="../Forums/forums.html" class="p-navEl-link p-navEl-link--splitMenu " data-xf-key="2" data-nav-id="forums">Forums</a>
             
                                 </div>
                                 </li>
