knowledge page done

--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -101,7 +101,7 @@
 <span class="p-nav-menuText">Menu</span>
 </a>
                 <div class="p-header-logo p-header-logo--image  d-none d-md-block">
-                    <a href="">
+                    <a href="../index.html">
 <img src="logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
 </a>
                 </div>
@@ -411,7 +411,7 @@ Post thread…
 </span>
                                                 <div class="node-main js-nodeMain">
                                                     <h3 class="node-title">
-                                                        <a class="text-color" href="/community/forums/announcements.64/" data-xf-init data-shortcut="node-description">Announcements</a>
+                                                        <a class="text-color" href="/Forums/Announcement/announcement.html" data-xf-init data-shortcut="node-description">Announcements</a>
                                                        
                                                     </h3>
                                                     <div class="node-description ">Check here for all the latest information!</div>
