knowledge page done

--- a/Forums/Announcement/announcement.html
+++ b/Forums/Announcement/announcement.html
@@ -98,7 +98,7 @@
 <span class="p-nav-menuText">Menu</span>
 </a>
         <div class="p-header-logo p-header-logo--image  d-none d-md-block">
-            <a href="">
+            <a href="/index.html">
 <img src="./styles/interwebz/xenforo/logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
 </a>
         </div>
@@ -107,7 +107,7 @@
                 <ul class="p-nav-list js-offCanvasNavSource">
                     <li>
                         <div class="p-navEl ">
-                            <a href="../index.html" class="p-navEl-link " data-xf-key="1" data-nav-id="home">Home</a>
+                            <a href="/index.html" class="p-navEl-link " data-xf-key="1" data-nav-id="home">Home</a>
                         </div>
                     </li>
                     <li>
