--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start">
     <div class="flex items-center flex-grow flex-shrink-0 w-full md:w-auto lg:flex-grow-0">
     <div class="flex items-center justify-between w-full md:w-auto">
-    <a href="https://interwebz-cheats.com" aria-label="Home">
+    <a href="./index.html" aria-label="Home">
         <img class="w-auto h-8 sm:h-10" src="https://interwebz-cheats.com/img/logo.svg" alt="INTERWEBZ Logo">
     </a>
     <!-- <button class="btn btn-primary"><i class="fa-solid fa-bars"></i></button> -->
@@ -67,7 +67,7 @@
     <div class="modal-dialog" style=" min-width: 97vw !important; margin-top: 8px;">
       <div class="modal-content" style="background-color: #362A51; border: 1px solid rgb(85,66,112);">
         <div class="modal-header" style="border: none;">
-            <a href="https://interwebz-cheats.com" aria-label="Home">
+            <a href="./index.html" aria-label="Home">
                 <img class="w-auto h-8 sm:h-10" src="https://interwebz-cheats.com/img/logo.svg" alt="INTERWEBZ Logo">
             </a>
             <button type="button" class="btn btn-secondary modal-btn fs-4" style="background: transparent; border: none; color: #907bb1;" data-bs-dismiss="modal">
