announcement page done

--- a/Forums/Announcement/announcement.html
+++ b/Forums/Announcement/announcement.html
@@ -74,7 +74,7 @@
                         <a class="nav-link fs-6" href="#">Dashboard</a>
                     </li>
                     <li class="nav-item dropdown p-2">
-                      <a class="nav-link dropdown-toggle fs-6" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle fs-6" href="../../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Knowledge base
                       </a>
                       <ul class="dropdown-menu dropdown-menu-dark">
@@ -126,7 +126,7 @@
                     </li>
                     <li>
                         <div class="p-navEl " data-has-children="true">
-                            <a href="/community/knowledge-base/" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfKnowledgeBase">Knowledge base</a>
+                            <a href="../../Knowledge base/knowledge-base.html" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfKnowledgeBase">Knowledge base</a>
                             <a data-xf-key="4" data-xf-click="menu" data-menu-pos-ref=" .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
                             <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
                                 <div class="menu-content">
@@ -427,7 +427,7 @@ Watch
 </div>
 <div class="structItem-cell structItem-cell--main" data-xf-init="touch-proxy">
 <div class="structItem-title">
-<a href="/community/threads/xmas-sale-up-to-35-off.71029/" class data-tp-primary="on" data-xf-init="preview-tooltip" data-preview-url="/community/threads/xmas-sale-up-to-35-off.71029/preview">Xmas Sale! - Up to 35% Off</a>
+<a href="../Announcement/Single/single.html" class data-tp-primary="on" data-xf-init="preview-tooltip" data-preview-url="/community/threads/xmas-sale-up-to-35-off.71029/preview">Xmas Sale! - Up to 35% Off</a>
 </div>
 <div class="structItem-minor">
 <ul class="structItem-parts">
