--- a/Knowledge base/knowledge-base.html
+++ b/Knowledge base/knowledge-base.html
@@ -85,7 +85,7 @@
 <span class="p-nav-menuText">Menu</span>
 </a>
                 <div class="p-header-logo p-header-logo--image  d-none d-md-block">
-                    <a href="">
+                    <a href="/index.html">
 <img src="/Knowledge base/styles/interwebz/xenforo/logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
 </a>
                 </div>
