account-details page done

--- a/Tickets/tickets.html
+++ b/Tickets/tickets.html
@@ -335,13 +335,13 @@ toufiq
                     <ul class="p-breadcrumbs " itemscope itemtype="https://schema.org/BreadcrumbList">
                         <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
                             <a href="/index.html" itemprop="item">
-<span itemprop="name">Home</span>
+<span itemprop="name"><i class="bi bi-house-door px-2"></i>Home</span>
 </a>
                             <meta itemprop="position" content="1" />
                         </li>
                         <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
                             <a href="/Tickets/tickets.html" itemprop="item">
-<span itemprop="name">Tickets</span>
+<span itemprop="name"><i class="bi bi-chevron-right px-1"></i>Tickets</span>
 </a>
                             <meta itemprop="position" content="2" />
                         </li>
